<resources>
    <string name="app_name">ISW Calculator</string>
    <string name="quit">Quit</string>
    <string name="ans">Ans</string>
    <string name="clear">Clear</string>
    <string name="dot">.</string>
    <string name="backspace" translatable="false">C</string>
    <string name="equal" translatable="false">=</string>
    <string name="add" translatable="false">+</string>
    <string name="subtract" translatable="false">−</string>
    <string name="multiply" translatable="false">&#215;</string>
    <string name="divide" translatable="false">&#247;</string>
    <string name="pow" translatable="false">x<sup><small>y</small></sup></string>
    <string name="sqrt" translatable="false">&#8730;</string>
    <string name="plus_minus" translatable="false">+/-</string>
    <string name="percent" translatable="false">%</string>
    <string name="parenthesisL" translatable="false">(</string>
    <string name="parenthesisR" translatable="false">)</string>
    <string name="factorial" translatable="false">!</string>
    <string name="sin" translatable="false">sin</string>
    <string name="cos" translatable="false">cos</string>
    <string name="tan" translatable="false">tan</string>
    <string name="ln" translatable="false">ln</string>
    <string name="log" translatable="false">log</string>
    <string name="asin" translatable="false">sin<sup><small>-1</small></sup></string>
    <string name="acos" translatable="false">cos<sup><small>-1</small></sup></string>
    <string name="atan" translatable="false">tan<sup><small>-1</small></sup></string>
    <string name="b0" translatable="false">0</string>
    <string name="b1" translatable="false">1</string>
    <string name="b2" translatable="false">2</string>
    <string name="b3" translatable="false">3</string>
    <string name="b4" translatable="false">4</string>
    <string name="b5" translatable="false">5</string>
    <string name="b6" translatable="false">6</string>
    <string name="b7" translatable="false">7</string>
    <string name="b8" translatable="false">8</string>
    <string name="b9" translatable="false">9</string>
    <string name="exp" translatable="false">&#215;10<sup><small>x</small></sup></string>
    <string name="pi" translatable="false">&#960;</string>
    <string name="e" translatable="false">e</string>
    <string name="TextView" translatable="false">TextView</string>
    <string name="about">About…</string>
    <string name="version">Version</string>
    <string name="developer">Developed by Iñaki SoftWare</string>
    <string name="copy_ans">Copy answer</string>
    <string name="ans_copied">Answer copied to clipboard</string>
    <string name="basic">Basic mode</string>
    <string name="extended">Extended mode</string>
    <string name="syntaxError">Syntax error</string>
</resources>
