<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_copy_ans"
        android:icon="@drawable/ic_baseline_content_copy"
        android:orderInCategory="100"
        android:title="@string/copy_ans"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mode"
        android:orderInCategory="101"
        android:title="@string/extended"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_outline_info"
        android:orderInCategory="102"
        android:title="@string/about"
        app:showAsAction="ifRoom" />

</menu>