<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/basic_body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/layout_control_height"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="100"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/basic_top"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorTextViewBackground"
            android:gravity="center|end"
            android:paddingLeft="@dimen/text_view_padding"
            android:paddingRight="@dimen/text_view_padding"
            android:text="@string/TextView"
            android:textColor="@color/colorTextViewText"
            android:textSize="@dimen/text_view_top_text_size" />

        <TextView
            android:id="@+id/basic_op"
            android:layout_width="@dimen/text_view_op_width"
            android:layout_height="match_parent"
            android:background="@color/colorTextViewOperationBackground"
            android:gravity="center"
            android:text="@string/equal"
            android:textColor="@color/colorTextViewOperationText"
            android:textSize="@dimen/text_view_top_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/basic_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="30"
        android:background="@color/colorTextViewBackground"
        android:gravity="center|end"
        android:paddingLeft="@dimen/text_view_padding"
        android:paddingRight="@dimen/text_view_padding"
        android:text="@string/TextView"
        android:textColor="@color/colorTextViewText"
        android:textSize="@dimen/text_view_main_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/basic_7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/b7"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size"
            android:textStyle="" />

        <Button
            android:id="@+id/basic_8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/b8"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/b9"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_pow"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorOperationButtonBackground"
            android:text="@string/pow"
            android:textAllCaps="false"
            android:textColor="@color/colorOperationButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_plusMinus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorOperationButtonBackground"
            android:text="@string/plus_minus"
            android:textColor="@color/colorOperationButtonText"
            android:textSize="@dimen/button_number_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/basic_4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/b4"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/b5"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/b6"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_multiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorOperationButtonBackground"
            android:text="@string/multiply"
            android:textAllCaps="false"
            android:textColor="@color/colorOperationButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_divide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorOperationButtonBackground"
            android:text="@string/divide"
            android:textColor="@color/colorOperationButtonText"
            android:textSize="@dimen/button_number_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/basic_1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/b1"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/b2"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/b3"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorOperationButtonBackground"
            android:text="@string/add"
            android:textColor="@color/colorOperationButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_subtract"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorOperationButtonBackground"
            android:text="@string/subtract"
            android:textColor="@color/colorOperationButtonText"
            android:textSize="@dimen/button_number_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/basic_empty"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:enabled="false"
            android:textColor="@color/colorNumberButtonBackground"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/b0"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_dot"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorNumberButtonBackground"
            android:text="@string/dot"
            android:textColor="@color/colorNumberButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_backspace"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorOperationButtonBackground"
            android:text="@string/backspace"
            android:textColor="@color/colorOperationButtonText"
            android:textSize="@dimen/button_number_text_size" />

        <Button
            android:id="@+id/basic_equal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="20"
            android:background="@color/colorOperationButtonBackground"
            android:text="@string/equal"
            android:textColor="@color/colorOperationButtonText"
            android:textSize="@dimen/button_number_text_size" />
    </LinearLayout>

</LinearLayout>
