<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/fragment_main_basic" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_control_height"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/quit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:background="@color/colorActionButtonBackground"
            android:text="@string/quit"
            android:textColor="@color/colorActionButtonText"
            android:textSize="@dimen/button_control_text_size" />

        <Button
            android:id="@+id/ans"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="34"
            android:background="@color/colorActionButtonBackground"
            android:text="@string/ans"
            android:textColor="@color/colorActionButtonText"
            android:textSize="@dimen/button_control_text_size" />

        <Button
            android:id="@+id/clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:background="@color/colorActionButtonBackground"
            android:text="@string/clear"
            android:textColor="@color/colorActionButtonText"
            android:textSize="@dimen/button_control_text_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>